fix: replace String.isBlank() with trim().isEmpty() for Java 8 compatibility
Co-Authored-By: Claude <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PWxBmFaTHYDnRLbxvZD7B8